# rust-web-portfolio

./: Cargo.toml  Trunk.toml  index.html
src/: app.rs  main.rs
styles/: index.scss
