[package]
name = "rust-web-portfolio"
version = "0.1.0"
edition = "2021"
description = "Creating web frontend with Rust!"
readme = "README.md"
repository = ""
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features=["csr"] }
